2013-02-03 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/wrap_type_traits.h : support for wrap( wstring )
        * include/Rcpp/internal/export.h : exporting wstring and containers of wstring
        * include/Rcpp/internal/wrap.h : support for wrap( wstring ) and containers of wstring
        * include/RcppCommon.h : definition of charsexp_from_wstring
        * src/api.cpp: implementation of charsexp_from_wstring

2013-02-02 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/MatrixRow.h: correct operator++(int) and operator--(int)
        * include/Rcpp/internal/Proxy_Iterator.h: correct operators ++ and --
        * include/Rcpp/sugar/Range.h: correct operators ++ and --
        * include/Rcpp/sugar/tools/iterator.h: correct operators ++ and --
        * include/Rcpp/vector/MatrixBase.h : correct operators ++ and --
        * include/Rcpp/vector/VectorBase.h : correct operators ++ and --
        * unitTests/cpp/Vector.cpp: new unit tests 
        * unitTests/runit.Vector.R: new unit tests
        * src/api.cpp: comment dropTrailing0 which is not used anymore
        * include/Rcpp/as.h: support for as<wstring>
        * include/Rcpp/internal/export.h: more support for wstring

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): Commented-out coerce_to_string() for real and
	complex arguments as R-devel (as of today) dislikes use of non-API
	functions Rf_EncodeComplex’, ‘Rf_EncodeReal’, ‘Rf_formatComplex’ 

	* .Rbuildignore: Added inst/include/Rcpp/preprocessor and
	sugar/functions/impl which are currently empty directories

	* src/Timer.cpp (Rcpp): Avoid a 'long long' warning from a const

2014-01-15  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: don't add source directory as an include path for
        sourceCpp; fix duplicate inclusion of Rcpp directory
        * R/RcppLdpath.R: don't quote paths on windows

2014-01-14  JJ Allaire <jj@rstudio.org>
