@@ -1,3 +1,10 @@
+2013-02-04 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/traits/r_type_traits.h : added the r_type_pairstring_wstring_tag tag
+        that is used to detect iterators over pair<const string,wstring>
+        * include/Rcpp/internal/wrap.h : using make_charsexp, a more generic version
+        of charsexp_from_wstring.
+        
 2013-02-03 Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/traits/wrap_type_traits.h : support for wrap( wstring )
